# netlink-notify

./: .gitignore  Makefile  README.md  config.def.h  config.h.in  meson.build  meson_options.txt  netlink-notify.c  netlink-notify.desktop  netlink-notify.h
systemd/: netlink-notify.service
